# tup

./: .gitignore  .sonarcloud.properties  CLAUDE.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
packaging/: entry.py  install.ps1  install.sh  tup.spec
src/tup/: __init__.py  __main__.py  backup.py  cli.py  config.py  database.py  progress.py  setup.py  uploader.py  utils.py  vfs_ops.py
src/tup/gui/: __init__.py  app.py  bridge.py  cache.py  dialogs.py  main_window.py  models.py  ops.py  setup_dialog.py  theme.py  transfers.py  transfers_panel.py
tests/: _qt.py  conftest.py  test_chat_discover.py  test_cli_upload.py  test_config.py  test_database.py  test_failed_retry.py  test_gui_download.py  test_gui_models.py  test_gui_ops.py  test_gui_setup.py  test_gui_transfers.py  test_gui_window.py  test_index.py  test_parity.py  test_phase5.py  test_smoke.py  test_sync.py  test_uploader.py  test_utils.py  test_vfs.py
