[project]
name = "tup"
version = "0.2.0"
description = "Telegram S3-style Virtual Filesystem and Uploader CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=20.8",
    "typer>=0.12,<1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "questionary>=2.0.0",
    "filetype>=1.2.0",
    "aiosqlite>=0.19.0",
    "telethon>=1.36",
    "hachoir>=3.3",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.6",
]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.scripts]
tup = "tup.cli:app"
tup-gui = "tup.gui.app:run_gui"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tup"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ASYNC", "B", "C4", "S"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
# Qt test helpers set QT_QPA_PLATFORM before any PyQt6 import can happen
"tests/_qt.py" = ["E402"]
"tests/test_gui_*" = ["E402"]
# Qt overrides (rowCount, headerData, dragEnterEvent, ...) are camelCase by API contract
"src/tup/gui/**" = ["N802", "N803", "N815"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["questionary.*", "filetype.*", "telethon.*", "hachoir.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
